kubernetes/apps/infra/kong/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kong
  labels:
    pod-security.kubernetes.io/enforce: baseline
